--- a/src/pages/details/details.module.css
+++ b/src/pages/details/details.module.css
@@ -32,7 +32,7 @@
   padding-bottom: 24px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 10px;
   justify-content: space-between;
 } 
@@ -63,6 +63,7 @@
   }
 
   .detailsDropdownsWrapper {
+    flex-wrap: wrap;
     padding-top: 16px;
     padding-bottom: 16px;
   } 
